--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -1,37 +1,40 @@
 @media screen and (max-width: 800px) {
 
-  html {
-    font-size: 1rem;
-    line-height: 1.4;
-  }
+html {
+  font-size: 1rem;
+  line-height: 1.4;
+}
 
-  .year-selector {
-    display: none;
-  }
+.year-selector {
+  display: none;
+}
 
-  .card {
-    font-size: 1rem;
-    width: 80vw;
-  }
+.card {
+  font-size: 1rem;
+  width: 80vw;
+}
 
-  .card-text img {
-    max-height: 60px;
-    max-width: 60px;
-    margin: var(--spacing-s) var(--spacing-s) var(--spacing-s) 0;
-  }
+.card-text img {
+  max-height: 60px;
+  max-width: 60px;
+  margin: var(--spacing-s) var(--spacing-s) var(--spacing-s) 0;
+}
 
-  .card-text p {
-    margin: var(--spacing-s) 10px var(--spacing-s) var(--spacing-s);
-  }
+.card-text p {
+  margin: var(--spacing-s) 10px var(--spacing-s) var(--spacing-s);
+}
 
-  .second {
-    grid-template-columns: repeat(1, 1fr);
-    padding: 70px 40px 40px 40px;
-  }
+.second {
+  -ms-grid-columns: (1fr)[1];
+  grid-template-columns: repeat(1, 1fr);
+  padding: 70px 40px 40px 40px;
+}
 
-  .projects {
-    height: fit-content;
-    margin-bottom: 40px;
-  }
+.projects {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  margin-bottom: 40px;
+}
 
 }
