--- a/web-archive/assets/web-archive.css
+++ b/web-archive/assets/web-archive.css
@@ -54,19 +54,18 @@ td {
   WEB ARCHIVE
 -------------------------------------- */
 .year-selector{
-  position: fixed;
+  position: absolute;
   bottom: 17px;
   left: 17px;
   padding: 6px 12px;
   border-radius: 20px;
   font-size: .8rem;
   font-family: sans-serif;
-  position: fixed;
   z-index: 3;
   border: 1px solid #80808040;
   backdrop-filter: blur(10px) saturate(100%);
   -webkit-backdrop-filter: blur(10px) saturate(100%);
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: snow;
   box-shadow: 0 0 10px var(--highlight);
 }
 
