--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -28,13 +28,13 @@ html {
   -ms-grid-columns: (1fr)[1];
   grid-template-columns: repeat(1, 1fr);
   padding: 70px 40px 40px 40px;
+  height: 100dvh;
 }
 
 .projects {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
-  margin-bottom: 40px;
 }
 
 }
