--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -26,14 +26,16 @@
 
   .second {
     grid-template-columns: repeat(1, 1fr);
-    padding: 70px 40px 40px 40px;
-    height: 100dvh;
+    padding: 50px 20px 20px 20px;
+    height: calc(var(--vh, 1vh) * 100);
+
   }
 
   .projects {
     height: -webkit-fit-content;
     height: -moz-fit-content;
     height: fit-content;
+    margin-bottom: 20px;
   }
 
 }
