--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,11 +89,12 @@ SCREEN HOME
   height: 100vh;
   width: 100vw;
   z-index: 2;
-  /*! position: relative; */
-  /* -webkit-backdrop-filter: blur(10px) saturate(100%);
-          backdrop-filter: blur(10px) saturate(100%); */
-  background-color: var(--white);
-  /*! margin-bottom: 100vh; */
+  position: relative;
+  -webkit-backdrop-filter: blur(10px) saturate(100%);
+          backdrop-filter: blur(10px) saturate(100%);
+  background-color: #fffafa69;
+  margin-bottom: calc(var(--vh, 1vh) * 100);
+  border-radius: 0 0 50px 50px;
 }
 
 .middle {
@@ -354,6 +355,7 @@ PROJETS HOME
 -------------------------------------- */
 
 .second {
+  position: fixed;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 40px 1fr;
