--- a/presence/style.css
+++ b/presence/style.css
@@ -20,7 +20,7 @@ body {
 
 
 h1 {
-    margin: 20px 0 0 20px;
+    margin: 10px 0 0 10px;
     font-weight: 400;
     font-style: italic;
 }
@@ -32,7 +32,7 @@ h1 {
     position: absolute;
 
     bottom: 0;
-height: 90vh;
+    height: 90vh;
 }
 
 .dot {
@@ -52,6 +52,22 @@ height: 90vh;
 
 .dot:hover {
     animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both;
+}
+
+.add {
+    border: 1px dashed black;
+    padding: 7px;
+    border-radius: 10px;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    color: inherit;
+    text-decoration: none;
+}
+
+.add:hover {
+    background-color: black;
+    color: white;
 }
 
 @keyframes shake {
@@ -79,9 +95,7 @@ height: 90vh;
 }
 
 
-.on {
-
-}
+.on {}
 
 .off {
     background-color: transparent !important;
@@ -97,10 +111,10 @@ span {
 
 @media screen and (max-width: 800px) {
 
-.people {
-    flex-direction: column;
-    width: 100vw;
-    align-items: center;
-  }
+    .people {
+        flex-direction: column;
+        width: 100vw;
+        align-items: center;
+    }
 
 }
