--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,8 +91,8 @@ SCREEN HOME
   z-index: 2;
   position: relative;
   display: inline-block;
-  -webkit-backdrop-filter: blur(10px) saturate(100%);
-          backdrop-filter: blur(10px) saturate(100%);
+  -webkit-backdrop-filter: blur(4px) saturate(100%);
+          backdrop-filter: blur(4px) saturate(100%);
   background-color: #fffafa69;
   margin-bottom: calc(var(--vh, 1vh) * 100);
   border-radius: 0 0 50px 50px;
@@ -489,6 +489,8 @@ PROJETS HOME
 .others a:hover{
   opacity: .7;
 }
+
+
 /* -----------------------------------
 MO
 -------------------------------------- */
@@ -504,9 +506,9 @@ td>a {
   display: -ms-flexbox;
   display: flex;
   margin: auto;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: start;
+  -webkit-box-align: flex-start;
+      -ms-flex-align: flex-start;
+          align-items: flex-start;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -515,7 +517,7 @@ td>a {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
-          flex-direction: column;
+      flex-direction: column;
   padding: 20px;
 }
 
