--- a/lune/assets/css/style.css
+++ b/lune/assets/css/style.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: "Inter";
-    font-weight: 400;
+    font-weight: 200;
     background-color: black;
 }
 
@@ -11,7 +11,7 @@ body:hover {
 }
 
 .night {
-    height: 100vh;
+    height: 100svh;
     width: 100vw;
     position: fixed;
     display: -webkit-box;
@@ -31,7 +31,7 @@ body:hover {
 .sky {
     background-image: -o-radial-gradient(circle, transparent 20vmin, darkslateblue 100vmin);
     background-image: radial-gradient(circle, transparent 20vmin, darkslateblue 100vmin);
-    height: 100vh;
+    height: 100svh;
     width: 100vw;
     position: fixed;
     top: 0;
@@ -83,7 +83,7 @@ body:hover {
 }
 
 .info {
-    height: 100vh;
+    height: 100svh;
     width: 100vw;
     position: fixed;
     display: -webkit-box;
