--- a/lune/assets/css/style.css
+++ b/lune/assets/css/style.css
@@ -11,7 +11,7 @@ body:hover {
 }
 
 .night {
-    height: 100svh;
+    height: calc(var(--vh, 1vh) * 100);
     width: 100vw;
     position: fixed;
     display: -webkit-box;
@@ -31,7 +31,7 @@ body:hover {
 .sky {
     background-image: -o-radial-gradient(circle, transparent 20vmin, darkslateblue 100vmin);
     background-image: radial-gradient(circle, transparent 20vmin, darkslateblue 100vmin);
-    height: 100svh;
+    height: calc(var(--vh, 1vh) * 100);
     width: 100vw;
     position: fixed;
     top: 0;
@@ -83,7 +83,7 @@ body:hover {
 }
 
 .info {
-    height: 100svh;
+    height: calc(var(--vh, 1vh) * 100);
     width: 100vw;
     position: fixed;
     display: -webkit-box;
