--- a/lyrics/style.css
+++ b/lyrics/style.css
@@ -179,7 +179,7 @@ button {
     height: 100vh;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    padding: 25px;
+    padding: 20px;
     background-color: #000000b2;
     border: none;
     -webkit-filter: blur(4px);
@@ -192,18 +192,19 @@ button {
 
 #open {
     position: fixed;
-    bottom: 10px;
-    left: 50vw;
-    -webkit-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    transform: translateX(-50%);
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
+    top: 0;
+    margin: 0;
+    left: 0;
     width: fit-content;
     z-index: 99;
-    border: 1px solid var(--lines);
-    border-radius: 5px;
-    padding: 3px 7px;
+    border: none;
+    min-width: 20px;
+    height: 20px;
+    background-color: var(--background);
+}
+
+#open:hover {
+    background-color: gainsboro;
 }
 
 @media screen and (max-width: 800px) {
