--- a/filsrouges/assets/css/style.css
+++ b/filsrouges/assets/css/style.css
@@ -12,7 +12,7 @@
     --spacing-m: 20px;
     --spacing-s: 10px;
 
-    --color-primary: red;
+    --color-primary: #E6351E;
 
     --radius-soft: 10px;
     --radius-hard: 20px;
