--- a/fils-rouges/assets/css/style.css
+++ b/fils-rouges/assets/css/style.css
@@ -64,12 +64,24 @@ a {
     text-decoration: underline;
     color: inherit;
     display: inline;
-    text-decoration-style: dashed;
+    -webkit-text-decoration-style: dashed;
+            text-decoration-style: dashed;
 }
 
 a:hover {
     color: inherit;
-    animation: clignottement .1s infinite linear;
+    -webkit-animation: clignottement .1s infinite linear;
+            animation: clignottement .1s infinite linear;
+}
+
+@-webkit-keyframes clignottement {
+    0% {
+        color: var(--color-primary);
+    }
+
+    100% {
+        color: white;
+    }
 }
 
 @keyframes clignottement {
@@ -89,13 +101,13 @@ h1 {
     width: 100%;
     text-align: center;
     margin: 0;
-    top: var(--spacing-m);
+    top: var(--spacing-s);
     text-transform: uppercase;
     color: white;
     text-decoration: none;
     z-index: 3;
 
-    font-size: var(--font-super);
+    font-size: 4.5vw;
 
     text-shadow: 0 0 3px var(--color-primary);
 }
@@ -110,13 +122,13 @@ h2 {
     width: 100%;
     text-align: center;
     margin: 0;
-    bottom: var(--spacing-m);
+    bottom: var(--spacing-s);
     font-weight: 100;
     text-decoration: none;
     color: white;
     z-index: 3;
 
-    font-size: 2rem;
+    font-size: 3vw;
     text-shadow: 0 0 2px var(--color-primary);
 
 }
@@ -160,18 +172,12 @@ P {
     width: 100%;
     border-radius: 50%;
     height: 100%;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
 
-    filter: grayscale(100%) sepia(100%) hue-rotate(300deg);
+    /* filter: grayscale(100%) sepia(100%) hue-rotate(300deg); */
 
 }
-
-.big a,
-.big p {
-    font-size: 2rem;
-}
-
-
 
 .center {
     text-align: center;
@@ -194,9 +200,13 @@ P {
     position: fixed;
     width: 50vw;
     height: calc(var(--vh, 1vh) * 100);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     background-color: transparent;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     pointer-events: none;
 
     background-image: url(../red_vert.svg);
@@ -205,7 +215,7 @@ P {
 
     z-index: 2;
 
-    display: none;
+    /* display: none; */
 }
 
 .overlayd {
@@ -222,14 +232,22 @@ P {
 /* BLOCKS */
 
 .block {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     height: calc(var(--vh, 1vh) * 100);
     width: 100vw;
 
-    align-content: center;
+    -ms-flex-line-pack: center;
 
-    justify-content: space-around;
-    align-items: center;
+        align-content: center;
+
+    -ms-flex-pack: distribute;
+
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 
     z-index: 1;
     position: relative;
@@ -238,14 +256,24 @@ P {
 .cote {
     height: 44vw;
     width: 44vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     border-radius: 50%;
     background-color: white;
     border: 2px solid white;
-    box-shadow: 0 0px 40px hsla(0, 0%, 0%, 0.1);
+    -webkit-box-shadow: 0 0px 40px hsla(0, 0%, 0%, 0.1);
+            box-shadow: 0 0px 40px hsla(0, 0%, 0%, 0.1);
 
 }
 
@@ -255,27 +283,32 @@ P {
     padding: 30px;
 }
 
-#video {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: calc(var(--vh, 1vh) * 100);
-    width: 100vw;
-    object-fit: cover;
+.turn {
+    -webkit-animation: tourning 4s linear infinite;
+            animation: tourning 4s linear infinite;
 }
 
+@-webkit-keyframes tourning {
+    0% {
+        -webkit-transform: rotate(0);
+                transform: rotate(0);
+    }
 
-.turn {
-    animation: tourning 4s linear infinite;
+    100% {
+        -webkit-transform: rotate(360deg);
+                transform: rotate(360deg);
+    }
 }
 
 @keyframes tourning {
     0% {
-        transform: rotate(0);
+        -webkit-transform: rotate(0);
+                transform: rotate(0);
     }
 
     100% {
-        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+                transform: rotate(360deg);
     }
 }
 
@@ -310,28 +343,59 @@ P {
 }
 
 
-@media screen and (max-width: 700px) and (orientation: portrait) {
+/* ROTATION SCREEN */
+.need-rotation {
+    position: fixed;
+    width: 100vw;
+    height: calc(var(--vh, 1vh) * 100);
+    background-color: rgba(0, 0, 0, 0.8);
+    -webkit-backdrop-filter: blur(10px);
+            backdrop-filter: blur(10px);
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    z-index: 999;
+
+    display: none;
+}
+
+.need-rotation img {
+    width: 50%;
+    max-width: 180px;
+}
+
+@media screen and (max-width: 700px) {
     h1 {
-        transform: rotate(-180deg);
+        -webkit-transform: rotate(-180deg);
+            -ms-transform: rotate(-180deg);
+                transform: rotate(-180deg);
+        width: -webkit-fit-content;
+        width: -moz-fit-content;
         width: fit-content;
-        writing-mode: vertical-rl;
+        -webkit-writing-mode: vertical-rl;
+            -ms-writing-mode: tb-rl;
+                writing-mode: vertical-rl;
         left: var(--spacing-s);
         top: 0;
         height: calc(var(--vh, 1vh) * 100);
         text-align: center;
-
-        font-size: var(--font-normal);
     }
 
     h2 {
-        writing-mode: vertical-rl;
+        -webkit-writing-mode: vertical-rl;
+            -ms-writing-mode: tb-rl;
+                writing-mode: vertical-rl;
         right: var(--spacing-s);
         top: 0;
         width: inherit;
         height: calc(var(--vh, 1vh) * 100);
         text-align: center;
-
-        font-size: var(--font-normal);
     }
 
     p {
@@ -371,10 +435,18 @@ P {
     }
 
     .block {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        align-items: center;
-        justify-content: space-around;
-        flex-direction: column;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -ms-flex-pack: distribute;
+            justify-content: space-around;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
         height: calc(var(--vh, 1vh) * 100);
         width: 100vw;
     }
@@ -382,8 +454,27 @@ P {
     .cote {
         height: calc(var(--vh, 1vh) * 45);
         width: calc(var(--vh, 1vh) * 45);
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
     }
 
 
+}
+
+
+
+
+@media screen and (max-width: 750px) and (orientation:portrait) {
+    .need-rotation {
+        display: -webkit-box !important;
+        display: -ms-flexbox !important;
+        display: flex !important;
+    }
+}
+
+@media screen and (max-width: 750px) and (orientation:landscape) {
+    .need-rotation {
+        display: none !important;
+    }
 }
